# market-intel-agent-v1.1

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  envExample.txt  main.py  pyproject.toml  render.yaml
core/: prompts.py  settings.py
embeddings/: model.py
routers/: agent.py
services/: agent_service.py  ai_service.py  document_service.py  scraper_service.py  search_service.py
services/llm/: groq.py
